# elden-ring-util-rs

./: CMakeLists.txt  Cargo.toml  build.rs  readme.md
lib-cpp/include/: eldenRingUtils.h
src/: bindings.rs  main.rs
src-cpp/: main.cpp  main.h  modUtils.cpp  modUtils.hpp
